# instancing-rendering-project

./: .gitignore  package-lock.json
CPPAlgorithm/: CMakeLists.txt  config.txt
CPPAlgorithm/document/: glb_wirtter代码流程.md  哈希计算.md  整体代码流程.md
CPPAlgorithm/src/: glb_reader.cpp  glb_reader.h  glb_writer.cpp  glb_writer.h  instancing_detector.cpp  instancing_detector.h  main.cpp  tileset_writer.cpp  tileset_writer.h  utilities.cpp  utilities.h
backend/: .env  package-lock.json  package.json  server.js
frontend/: .env  package-lock.json  package.json  流程.md
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: CesiumViewer.tsx  FileUpload.tsx  InstancingPanel.tsx  MenuBar.css  MenuBar.tsx
frontend/src/components/cesium/: CesiumScene.tsx  CesiumViewer.tsx  PerformanceStats.tsx
frontend/src/components/layerManage/: icons.tsx  layerController.css  layerController.tsx
frontend/src/components/menu/: InstancingTool.tsx  SettingsPanel.tsx  TilesLoader.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useInstancing.ts
frontend/src/pages/: MainPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
